<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="none">
    <item android:title="@string/drawer_premium_upgrade"
        android:icon="@drawable/baseline_star_border_24"
        >
    </item>
    <item android:title="@string/drawer_account"
        android:icon="@drawable/baseline_account_circle_white_24">
    </item>
    <item android:title="@string/btn_exercise"
        android:id="@+id/drawer_exercises"
        android:icon="@drawable/baseline_fitness_center_white_36">
    </item>
    <item android:title="@string/btn_stretch"
        android:icon="@drawable/baseline_accessibility_white_48">
    </item>
    <item android:title="@string/btn_workout"
        android:icon="@drawable/baseline_directions_run_white_48">
    </item>
    <item android:title="@string/btn_recipe"
        android:icon="@drawable/baseline_restaurant_white_48">
    </item>
    <item android:title="@string/btn_diary"
        android:icon="@drawable/baseline_book_white_48">
    </item>
    <item android:title="@string/btn_social"
        android:icon="@drawable/baseline_groups_white_48">
    </item>
    <item android:title="@string/sign_out"
        android:icon="@drawable/baseline_logout_white_48">
    </item>

</group>
</menu>