<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_red_40"
    tools:context=".GoalsFragmentTwo">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/available_equipment"
    android:layout_gravity="center"
    android:textSize="18sp"
    android:layout_marginTop="30dp"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="25dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"

            >
            <CheckBox
                android:id="@+id/checkbox_bodyweight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/bodyweight"/>
            <CheckBox
                android:id="@+id/checkbox_barbel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/barbell"/>
            <CheckBox
                android:id="@+id/checkbox_dumbell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/dumbell"/>
            <CheckBox
                android:id="@+id/checkbox_bands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/resistance_bands"/>
            <CheckBox
                android:id="@+id/checkbox_cardio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardio_machines"
                android:textSize="18sp"/>
            <CheckBox
                android:id="@+id/checkbox_rower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rower"
                android:textSize="18sp"/>
            <CheckBox
                android:id="@+id/checkbox_pullup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pull_up_bar"
                android:textSize="18sp"/>
            <Button
                android:id="@+id/btn_goals_finish"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/img_btn"
                android:backgroundTint="@color/light_red_40"
                android:text="@string/finish"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textColor="@color/hint"
                android:textSize="18sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>