<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_red_40"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_red"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_arrow_left_white_36dp"
            app:navigationIconTint="@color/white"
            />
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_gravity="center"
        android:textSize="28sp"
        android:textColor="@color/white"
        />
    <EditText
        android:layout_marginTop="50dp"
        android:id="@+id/et_register_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/username"
        android:textColorHint="@color/gray_hint"
        android:textColor="@color/black"/>
    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_register_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/email"
        android:textColorHint="@color/gray_hint"
        android:textColor="@color/black"/>
    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_register_confirm_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/confirm_email"
        android:textColorHint="@color/gray_hint"
        android:textColor="@color/black"/>
    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_register_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="@color/gray_hint"
        android:textColor="@color/black"/>
    <EditText
        android:layout_marginTop="15dp"
        android:id="@+id/et_register_confirm_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="5dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/gray_hint"
        android:textColor="@color/black"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/img_btn_category"
        android:text="@string/register"
        android:textSize="16sp"
        android:backgroundTint="@color/light_red_40"
        android:layout_marginTop="50dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>

