<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_red"
    android:orientation="vertical"
    android:weightSum="2">
    <ImageView
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:background="@drawable/logo"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.25"
        android:orientation="vertical">
        <EditText
            android:id="@+id/et_email_address"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/gray_hint"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textColor="@color/black"/>
        <EditText

            android:id="@+id/et_login_password"
            android:gravity="center"
            android:inputType="textPassword"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/gray_hint"
            android:background="@color/white"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textColor="@color/black"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/img_btn_category"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:backgroundTint="@color/dark_red"
            android:layout_margin="10dp"
            app:icon="@drawable/baseline_login_white_24"
            app:iconTint="@color/white"/>
        <TextView
            android:id="@+id/tv_reset_password"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_marginBottom="15dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin_anonymous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/img_btn_category"
            android:text="@string/anonymous_signin"
            android:textSize="16sp"
            android:backgroundTint="@color/dark_red"
            app:icon="@drawable/anonymous"
            app:iconSize="24dp"
            app:iconTint="@color/white"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signin_register"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/img_btn_category"
            android:text="@string/register"
            android:textSize="16sp"
            android:backgroundTint="@color/dark_red"
            app:icon="@drawable/baseline_person_add_white_24"
            app:iconSize="24dp"
            app:iconTint="@color/white"
            />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>