<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalsFragmentOne"
    android:background="@color/light_red_40">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_weight="1.2"
        android:gravity="center"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/goals_height_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/length_measurement"
            android:background="@color/white"
            android:padding="2dp"
            android:layout_marginLeft="15dp"
            android:theme="@style/spinner_goals"
/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/user_height"/>
        <EditText
            android:id="@+id/et_goals_height"
            android:layout_width="50dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/goals_weight_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/weight_measurements"
            android:background="@color/white"
            android:padding="2dp"
            android:layout_marginLeft="15dp"
            android:theme="@style/spinner_goals"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/user_weight"/>
        <EditText
            android:id="@+id/et_goals_weight"
            android:layout_width="50dp"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:padding="10dp"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:text="@string/goal"
    android:textSize="20sp"
    android:textColor="@color/white"/>
    <androidx.appcompat.widget.AppCompatSpinner

        android:id="@+id/set_goal_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/goals"
        android:background="@color/white"
        android:theme="@style/spinner_goals"
        />

</androidx.appcompat.widget.LinearLayoutCompat>
    <Button
        android:id="@+id/btn_goals_next"
    android:layout_marginTop="100dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/img_btn_category"
    android:text="@string/next"
    android:textSize="16sp"
    android:backgroundTint="@color/light_red"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:textSize="18sp"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:gravity="bottom"
        />
</androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>